Adding description to figures

--- a/report/main.tex
+++ b/report/main.tex
@@ -270,7 +270,7 @@ Each thread calculates its own index.
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.8\textwidth]{O0.png}
-\caption{K80:2 configuration}
+\caption{K80:2 configuration using -O0 option in the compiler. X and Y axles are in logarithmic scale.}
 \label{fig:bandwidthTest}
 \end{figure}
 
@@ -278,7 +278,7 @@ Each thread calculates its own index.
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.8\textwidth]{O1.png}
-  \caption{K80:2 configuration}
+  \caption{K80:2 configuration using -Ox option in the compiler. X and Y axles are in logarithmic scale.}
   \label{fig:bandwidthTest}
   \end{figure}
   
