Adding public repo

--- a/report/main.tex
+++ b/report/main.tex
@@ -135,7 +135,7 @@ FDD3258 - Introduction to High-Performance Computing (GPU module)
 \hrule
 \vspace{.2in}
 
-All source code can be found here \url{XX}.
+All source code can be found here \url{https://github.com/Jacarte/HPC_cuda}.
 
 
 \section{Exercise 1 - Questions about GPU Architecture}
