--- a/report/main.tex
+++ b/report/main.tex
@@ -144,7 +144,7 @@ All source code can be found here \url{https://github.com/Jacarte/HPC_cuda}.
     GPUs were traditionally designed to optimize tasks related to image processing and display, and computer graphics. More recently, GPUs are also utilized in deep learning and HPC workloads because of their specialized microcircuits that are can accelerate such tasks and obtain maximum processing speeds. This can be attributed to the large number of ALUs in their processing cores, and hardware-based threads which can handle highly mathematical and highly parallel workloads.
     
     \item \textit{Why do we talk about throughput-oriented architecture when we talk about GPUs?}\\
-    GPUs differ from traditional CPUs in their architecture. Traditional CPUs have a latency-oriented architecture, which means that their performance is measured on the basis the time taken to perform an individual task. On the other hand, GPU architecture is throughput-oriented, which means that GPUs aim to maximize the number of tasks performed per unit time. 
+    GPUs differ from traditional CPUs in their architecture. Traditional CPUs have a latency-oriented architecture, which means that their performance is measured on the basis of the time taken to perform an individual task. On the other hand, GPU architecture is throughput-oriented, which means that GPUs aim to maximize the number of tasks performed per unit time.
     
     \item \textit{List the main differences between GPUs and CPUs in terms of architecture.}\\
     CPU architectures are latency-oriented, whereas GPU architectures are throughput-oriented. In order to achieve low latency, CPU cores have a large Control Unit (CU), and fewer Arithmetic Logical Units (ALUs). This is in contrast to the design of a GPU core, which has many more ALUs and a much smaller CU. Additionally, in CPUs, threads are implemented using software, whereas in the case of GPUs, threads are hardware-based. These architectural differences allow a GPU to complete many more tasks than a CPU in the same amount of time. A single GPU core is simpler in design than a CPU core. It cannot exist in isolation, and usually needs to communicate with a CPU core (called the host) for performing OS tasks. 
